# Parafoil_RflyPilot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
basic_controller_codegen/: CMakeLists.txt  PIDControllerCodeGen.cpp  PIDControllerCodeGen.h  basicController.cpp  basicController.h  basicController_private.h  basicController_types.h  param_api.cpp  param_api.h  param_load_block_cgen_wrapper.cpp  param_load_block_cgen_wrapper.h  param_load_block_wrapper.cpp
config/: calibration.txt  configure.h  parameter.txt  rflypilot.conf  rflypilot.txt
controller_codegen/: CMakeLists.txt
estimator_codegen/: CMakeLists.txt
sih_codegen/: CMakeLists.txt
src/: include.h  main.cpp
src/application/: attitudeEstimator_thread.cpp  basicController_thread.cpp  basicController_thread.h  console_thread.cpp  console_thread.h  gps_thread.cpp  gps_thread.h  icm20689_thread.cpp  icm20689_thread.h  icm42688p_thread.cpp  icm42688p_thread.h  ist8310_thread.cpp  ist8310_thread.h  log_thread.cpp  log_thread.h  ms5611_thread.cpp  ms5611_thread.h  mytask_thread.cpp  mytask_thread.h  offboard_thread.cpp  offboard_thread.h  positionEstimator_thread.cpp  qmc5883l_thread.cpp  qmc5883l_thread.h  sbus_thread.cpp  sbus_thread.h  scope_thread.cpp  scope_thread.h  sih_thread.cpp  sih_thread.h  system_app.cpp  system_app.h  ulog_thread.cpp  ulog_thread.h  usrController_thread.cpp  usrController_thread.h
src/calibration/: accel_calib.cpp  ellipsoid_method.cpp  ellipsoid_method.h  ellipsoid_method_types.h  gyro_calib.cpp  mag_calib.cpp  sensor_calibration.cpp  sensor_calibration.h
src/console/: console.cpp  console.h  screen.cpp  screen.h
src/drivers/actuator/fpga/: actuator_fpga.cpp  actuator_fpga.h
src/drivers/actuator/pca9685/: pca9685.cpp  pca9685.h
src/drivers/barometer/ms5611/: ms5611.cpp  ms5611.h  ms5611_main.cpp
src/drivers/gps/: gps_api.cpp  gps_api.h  ubx.h
src/drivers/imu/accelerometer/: PX4Accelerometer.cpp  PX4Accelerometer.h
src/drivers/imu/gyroscope/: PX4Gyroscope.cpp  PX4Gyroscope.h
src/drivers/imu/icm20689/: icm20689.cpp  icm20689.h
src/drivers/imu/icm20689new/: ICM20689.cpp  ICM20689.h  InvenSense_ICM20689_registers.h
src/drivers/imu/icm42688p/: ICM42688P.cpp  ICM42688P.h  InvenSense_ICM42688P_registers.h  icm42688p_main.cpp  sensor_accel_fifo.h  sensor_gyro_fifo.h
src/drivers/magnetometer/ist8310/: iSentek_IST8310_registers.h  ist8310.cpp  ist8310.h  ist8310_main.cpp
src/drivers/magnetometer/qmc5883l/: QMC5883L.cpp  QMC5883L.h  QMC5883l_main.cpp  QST_QMC5883L_registers.h
src/drivers/posix/: i2c.cpp  i2c.h  spi.cpp  spi.h
src/drivers/px4lib/: limit.h  test_time.cpp  test_time.h
src/drivers/rc/sbus/: sbus_api.cpp  sbus_api.h
src/lib/: math_function.cpp  math_function.h  ringbuffer.h
src/log/: binlog.cpp  binlog.h
src/msg/: msg_def.cpp  msg_def.h
src/mytask/: mytask.cpp  mytask.h
src/parameter/: parameter_read.cpp  parameter_read.h
src/scope/: scope.cpp  scope.h
src/screen/: screen.cpp  screen.h
src/simulink_utility/: norm_a2pQkYtO.cpp  norm_a2pQkYtO.h  norm_afMWvhHe.cpp  norm_afMWvhHe.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_assert.h  rt_atan2d_snf.cpp  rt_atan2d_snf.h  rt_atan2f_snf.cpp  rt_atan2f_snf.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rt_r32zcfcn.cpp  rt_r32zcfcn.h  rt_zcfcn.cpp  rt_zcfcn.h  rtwtypes.h  zero_crossing_types.h
src/system_utility/: system.cpp  system.h  systime.cpp  systime.h
src/thread/: attitudeEstimator_thread.cpp  attitudeEstimator_thread.h  positionEstimator_thread.cpp  positionEstimator_thread.h  sbus_rc_thread.cpp  sbus_rc_thread.h  sih_thread.cpp  usrController_thread.cpp
tools/: compile.sh  upload.sh
